--- a/text.html
+++ b/text.html
@@ -30,6 +30,9 @@
             });
             const scene = new THREE.Scene();
 
+            const directionalLight = new THREE.DirectionalLight(0xffffff, 0.3);
+            directionalLight.position.set(10, 15, 10);
+            scene.add(directionalLight);
 
             // To be continued in upcoming steps.
             // Set up the WebGLRenderer, which handles rendering to the session's base layer.
