--- a/text.html
+++ b/text.html
@@ -30,7 +30,7 @@
             });
             const scene = new THREE.Scene();
 
-            const directionalLight = new THREE.DirectionalLight(0xffffff, 0.3);
+            const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
             directionalLight.position.set(10, 15, 10);
             scene.add(directionalLight);
 
@@ -95,8 +95,8 @@
             let cube = new THREE.Mesh(new THREE.BoxBufferGeometry(0.2, 0.2, 0.2), materials);
 
             session.addEventListener("select", (event) => {
-                if (cube) {
-                    const clone = cube.clone();
+                if (flower) {
+                    const clone = flower.clone();
                     clone.position.copy(reticle.position);
                     scene.add(clone);
                 }
