--- a/test.html
+++ b/test.html
@@ -89,14 +89,14 @@
             });
 
 
-            const materials = [
-                new THREE.MeshBasicMaterial({
-                    color: 0xff0000
-                }),
+            // const materials = [
+            //     new THREE.MeshBasicMaterial({
+            //         color: 0xff0000
+            //     }),
 
-            ];
+            // ];
 
-            let cube = new THREE.Mesh(new THREE.BoxBufferGeometry(0.2, 0.2, 0.2), materials);
+            // let cube = new THREE.Mesh(new THREE.BoxBufferGeometry(0.2, 0.2, 0.2), materials);
 
             session.addEventListener("select", (event) => {
                 if (flower) {
